--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
     <div class="subtitle">Max out your image</div>
     <div class="store-links">
         <a href="your-app-apple-link">
-            <img src="apple-store-logo.png" alt="Download on the App Store">
+            <img src="apple.png" alt="Download on the App Store">
         </a>
         <!-- Add Android link if needed -->
         <!-- <a href="your-app-android-link">
-            <img src="google-play-store-logo.png" alt="Get it on Google Play">
+            <img src="android.png" alt="Get it on Google Play">
         </a> -->
     </div>
     <div class="footer">
