--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
     </style>
 </head>
 <body>
-    <div class="logo">LooxMaxApp</div>
+    <div class="logo">
+        <img src="LooxMaxAppLogo.png" alt="LooxMaxApp Logo">
+    </div>
     <div class="subtitle">Max out your image</div>
     <div class="store-links">
         <a href="your-app-apple-link">
