--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
             margin: 0;
             font-family: Arial, sans-serif;
         }
-        .logo {
-            font-size: 3em;
-            color: #f39c12;
+        .logo img {
+            width: 150px; /* Adjust width to make the logo smaller */
         }
         .subtitle {
             margin-top: 10px;
             font-size: 1.2em;
-            color: #f39c12;
+            color: #C0C0C0; /* Silver color */
         }
         .store-links img {
             width: 200px;
