--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
             height: 100vh;
             margin: 0;
             font-family: Arial, sans-serif;
+            text-align: center;
         }
         .logo img {
-            width: 150px; /* Adjust width to make the logo smaller */
+            width: 300px;  /* Adjust this value to match the text width */
         }
         .subtitle {
             margin-top: 10px;
-            font-size: 1.2em;
+            font-size: 24px; /* Keep the text size as it is now */
             color: #C0C0C0; /* Silver color */
         }
         .store-links img {
