--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
             <img src="apple.png" alt="Download on the App Store">
         </a>
         <!-- Add Android link if needed -->
-        <!-- <a href="your-app-android-link">
+        <a href="your-app-android-link">
             <img src="android.png" alt="Get it on Google Play">
-        </a> -->
+        </a>
     </div>
     <div class="footer">
         <a href="#">Contact</a> - 
