--- a/index.html
+++ b/index.html
@@ -18,16 +18,21 @@
             text-align: center;
         }
         .logo img {
-            width: 300px;  /* Adjust this value to match the text width */
+            width: 300px; /* Adjust this value to match the text width */
         }
         .subtitle {
             margin-top: 10px;
             font-size: 24px; /* Keep the text size as it is now */
             color: #C0C0C0; /* Silver color */
         }
+        .store-links {
+            display: flex; /* Align the app store icons in a row */
+            justify-content: center; /* Centers the icons within the .store-links div */
+            gap: 20px; /* Adds space between the icons */
+            margin-top: 20px; /* Adjust margin for spacing above */
+        }
         .store-links img {
             width: 200px;
-            margin: 20px;
         }
         .footer {
             position: absolute;
@@ -57,7 +62,6 @@
         <a href="your-app-apple-link">
             <img src="apple.png" alt="Download on the App Store">
         </a>
-        <!-- Add Android link if needed -->
         <a href="your-app-android-link">
             <img src="android.png" alt="Get it on Google Play">
         </a>
