--- a/index.html
+++ b/index.html
@@ -67,15 +67,16 @@
         </a>
     </div>
     <div class="footer">
-        <a href="#">Contact</a> - 
-        <a href="#">Terms</a> - 
-        <a href="#">Privacy</a> - 
-        <a href="#">About</a>
-        <div class="social-icons">
-            <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
-            <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
-            <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
-        </div>
+    <a href="mailto:contact@looxmaxapp.com">Contact</a> - 
+    <a href="https://looxmaxapp.com/terms">Terms</a> - 
+    <a href="https://looxmaxapp.com/privacy">Privacy</a> - 
+    <a href="https://looxmaxapp.com/about">About</a>
+    <div class="social-icons">
+        <a href="https://www.facebook.com/yourprofile"><img src="facebook-icon.png" alt="Facebook"></a>
+        <a href="https://www.twitter.com/yourprofile"><img src="twitter-icon.png" alt="Twitter"></a>
+        <a href="https://www.instagram.com/yourprofile"><img src="instagram-icon.png" alt="Instagram"></a>
     </div>
+</div>
+
 </body>
 </html>
