--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
             margin: 0 10px;
             text-decoration: none;
         }
+        .social-icons {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px; /* Add space between the icons */
+        }
         .social-icons img {
             width: 24px;
             margin: 0 5px;
@@ -67,16 +73,16 @@
         </a>
     </div>
     <div class="footer">
-    <a href="mailto:contact@looxmaxapp.com">Contact</a> - 
-    <a href="https://looxmaxapp.com/terms">Terms</a> - 
-    <a href="https://looxmaxapp.com/privacy">Privacy</a> - 
-    <a href="https://looxmaxapp.com/about">About</a>
-    <div class="social-icons">
-        <a href="https://www.facebook.com/yourprofile"><img src="facebook-icon.png" alt="Facebook"></a>
-        <a href="https://www.twitter.com/yourprofile"><img src="twitter-icon.png" alt="Twitter"></a>
-        <a href="https://www.instagram.com/yourprofile"><img src="instagram-icon.png" alt="Instagram"></a>
+        <a href="mailto:contact@looxmaxapp.com">Contact</a> - 
+        <a href="https://looxmaxapp.com/terms">Terms</a> - 
+        <a href="https://looxmaxapp.com/privacy">Privacy</a> - 
+        <a href="https://looxmaxapp.com/about">About</a>
+        <div class="social-icons">
+            <a href="https://www.facebook.com/yourprofile"><img src="facebook-icon.png" alt="Facebook"></a>
+            <a href="https://www.twitter.com/yourprofile"><img src="twitter-icon.png" alt="Twitter"></a>
+            <a href="https://www.instagram.com/yourprofile"><img src="instagram-icon.png" alt="Instagram"></a>
+        </div>
     </div>
-</div>
-
 </body>
 </html>
+
