--- a/index.html
+++ b/index.html
@@ -48,10 +48,9 @@
             text-decoration: none;
         }
         .social-icons {
-            display: inline-flex;
-            align-items: center;
+            display: flex;
             justify-content: center;
-            gap: 10px; /* Add space between the icons */
+            margin-top: 10px; /* Adds space between the links and the icons */
         }
         .social-icons img {
             width: 24px;
@@ -73,10 +72,12 @@
         </a>
     </div>
     <div class="footer">
-        <a href="mailto:contact@looxmaxapp.com">Contact</a> - 
-        <a href="https://looxmaxapp.com/terms">Terms</a> - 
-        <a href="https://looxmaxapp.com/privacy">Privacy</a> - 
-        <a href="https://looxmaxapp.com/about">About</a>
+        <div>
+            <a href="mailto:contact@looxmaxapp.com">Contact</a> - 
+            <a href="https://looxmaxapp.com/terms">Terms</a> - 
+            <a href="https://looxmaxapp.com/privacy">Privacy</a> - 
+            <a href="https://looxmaxapp.com/about">About</a>
+        </div>
         <div class="social-icons">
             <a href="https://www.facebook.com/yourprofile"><img src="facebook-icon.png" alt="Facebook"></a>
             <a href="https://www.twitter.com/yourprofile"><img src="twitter-icon.png" alt="Twitter"></a>
@@ -85,4 +86,5 @@
     </div>
 </body>
 </html>
+
 
