--- a/index.html
+++ b/index.html
@@ -79,10 +79,11 @@
             <a href="https://looxmaxapp.com/about">About</a>
         </div>
         <div class="social-icons">
-            <a href="https://www.facebook.com/yourprofile"><img src="facebook-icon.png" alt="Facebook"></a>
-            <a href="https://www.twitter.com/yourprofile"><img src="twitter-icon.png" alt="Twitter"></a>
-            <a href="https://www.instagram.com/yourprofile"><img src="instagram-icon.png" alt="Instagram"></a>
+            <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
+            <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
+            <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
         </div>
+
     </div>
 </body>
 </html>
