--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LooxMaxApp</title>
-    <link rel="icon" href="favicon.png" type="image/x-icon">
+    <link rel="icon" href="Favicon.png" type="image/x-icon">
     <style>
         body {
             background-color: black;
