--- a/terms.html
+++ b/terms.html
@@ -39,8 +39,64 @@
 <body>
     <div class="content">
         <h1>Terms and Conditions</h1>
-        <p>Welcome to LooxMaxApp. These terms and conditions outline the rules and regulations for the use of our App.</p>
-        <!-- Add your terms and conditions content here -->
+        <p>Last Updated: 7/30/2024
+
+Welcome to LooxMax App! These Terms of Service ("Terms") govern your use of the LooxMax App ("App") provided by OWEN MEDIA, LLC ("Company," "we," "us," or "our"). By downloading, installing, or using the App, you agree to these Terms. If you do not agree to these Terms, do not use the App.
+
+1. Acceptance of Terms
+By using the App, you acknowledge that you have read, understood, and agree to be bound by these Terms and any other policies referenced herein, including our Privacy Policy.
+
+2. Eligibility
+You must be at least 17 years old to use the App. By using the App, you represent and warrant that you meet this age requirement.
+
+3. User Accounts
+To use certain features of the App, you may be required to create an account. You agree to provide accurate and complete information and to keep this information up to date. You are responsible for maintaining the confidentiality of your account credentials and for all activities that occur under your account.
+
+4. Subscription Services
+The App may offer subscription services that provide access to premium features. By subscribing, you agree to pay the applicable subscription fees and to the terms of the subscription plan you select. Subscriptions automatically renew unless canceled prior to the renewal date. You can manage and cancel your subscription through your account settings.
+
+5. User Content
+You retain all rights to any content you upload, submit, or create through the App ("User Content"). By providing User Content, you grant us a non-exclusive, worldwide, royalty-free, sublicensable, and transferable license to use, reproduce, modify, distribute, display, and perform your User Content in connection with the operation of the App and our business.
+
+6. Prohibited Conduct
+You agree not to:
+
+Use the App for any illegal purpose or in violation of any local, state, national, or international law.
+Harass, threaten, demean, embarrass, or otherwise harm any other user of the App.
+Upload, post, or transmit any User Content that is defamatory, obscene, pornographic, vulgar, or offensive.
+Attempt to gain unauthorized access to the App or any systems or networks connected to the App.
+Use the App to distribute viruses, malware, or other harmful software.
+7. Intellectual Property
+The App and its content, including text, graphics, images, logos, and software, are the property of OWEN MEDIA, LLC or its licensors and are protected by copyright, trademark, and other intellectual property laws. You may not use, reproduce, or distribute any part of the App without our prior written permission.
+
+8. Disclaimers
+The App is provided "as is" and "as available" without warranties of any kind, either express or implied. We do not warrant that the App will be uninterrupted or error-free, that defects will be corrected, or that the App is free of viruses or other harmful components.
+
+9. Limitation of Liability
+To the maximum extent permitted by law, OWEN MEDIA, LLC shall not be liable for any indirect, incidental, special, consequential, or punitive damages, or any loss of profits or revenues, whether incurred directly or indirectly, or any loss of data, use, goodwill, or other intangible losses, resulting from (i) your use of or inability to use the App; (ii) any unauthorized access to or use of our servers and/or any personal information stored therein; (iii) any interruption or cessation of transmission to or from the App; (iv) any bugs, viruses, trojan horses, or the like that may be transmitted to or through the App by any third party; or (v) any errors or omissions in any content or for any loss or damage incurred as a result of the use of any content posted, emailed, transmitted, or otherwise made available through the App.
+
+10. Indemnification
+You agree to indemnify and hold harmless OWEN MEDIA, LLC, its officers, directors, employees, and agents from and against any claims, liabilities, damages, losses, and expenses, including reasonable attorneys' fees, arising out of or in any way connected with your access to or use of the App, your violation of these Terms, or your infringement of any third-party rights.
+
+11. Governing Law
+These Terms shall be governed by and construed in accordance with the laws of the State of Wyoming, without regard to its conflict of law principles. You agree to submit to the exclusive jurisdiction of the courts located in Sheridan County, Wyoming, to resolve any dispute arising out of these Terms or the App.
+
+12. Changes to Terms
+We reserve the right to modify these Terms at any time. If we make material changes to these Terms, we will notify you by updating the date at the top of these Terms and providing additional notice as required by law. Your continued use of the App after such changes will constitute your acceptance of the new Terms.
+
+13. Contact Information
+If you have any questions about these Terms, please contact us at:
+
+OWEN MEDIA, LLC
+30 N Gould St, Ste N
+Sheridan, WY 82801
+Email: contact@looxmaxapp.com
+
+14. Miscellaneous
+These Terms constitute the entire agreement between you and OWEN MEDIA, LLC regarding your use of the App. If any provision of these Terms is found to be invalid or unenforceable, the remaining provisions will remain in full force and effect. Our failure to enforce any right or provision of these Terms will not be considered a waiver of those rights.
+
+Thank you for using LooxMax App!</p>
+        
     </div>
     <div class="footer">
         <a href="index.html">Home</a> - 
