--- a/terms.html
+++ b/terms.html
@@ -8,31 +8,37 @@
         body {
             background-color: black;
             color: white;
+            margin: 0;
+            font-family: Arial, sans-serif;
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-            font-family: Arial, sans-serif;
-            text-align: center;
         }
-        .content {
+        .container {
             max-width: 800px;
+            padding: 20px;
             margin: 20px;
+            text-align: left;
         }
         .footer {
-            position: absolute;
-            bottom: 20px;
             width: 100%;
             text-align: center;
             background-color: #e0e0e0;
             padding: 10px 0;
+            position: absolute;
+            bottom: 0;
         }
         .footer a {
             color: black;
             margin: 0 10px;
             text-decoration: none;
+        }
+        h1, h2, p {
+            margin: 10px 0;
+        }
+        ul {
+            list-style-type: disc;
+            padding-left: 40px;
         }
     </style>
 </head>
@@ -107,3 +113,4 @@
     </div>
 </body>
 </html>
+
