--- a/terms.html
+++ b/terms.html
@@ -13,6 +13,10 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            position: relative;
+            padding-bottom: 50px; /* Height of the footer */
         }
         .container {
             max-width: 800px;
@@ -113,4 +117,5 @@
     </div>
 </body>
 </html>
+
 
