--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <a href="mailto:contact@looxmaxapp.com">Contact</a> - 
             <a href="https://looxmaxapp.com/terms">Terms</a> - 
             <a href="https://looxmaxapp.com/privacy">Privacy</a> - 
-            <a href="https://looxmaxapp.com/about">About</a>
+            <a href="https://looxmaxapp.com/deleteapp">App Info</a>
         </div>
         <div class="social-icons">
             <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
