--- a/deleteapp.html
+++ b/deleteapp.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LooxMaxApp - How to Delete Your Account</title>
+    <link rel="icon" href="Favicon.png" type="image/x-icon">
     <style>
         body {
             background-color: black;
