--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
     <div class="footer">
         <div>
-            <a href="mailto:contact@looxmaxapp.com">Contact</a> - 
+            <a href="https://looxmaxapp.com/contact">Contact</a> - 
             <a href="https://looxmaxapp.com/terms">Terms</a> - 
             <a href="https://looxmaxapp.com/privacy">Privacy</a> - 
             <a href="https://looxmaxapp.com/deleteapp">App Info</a>
