--- a/terms.html
+++ b/terms.html
@@ -113,7 +113,7 @@
     </div>
     <div class="footer">
         <a href="index.html">Home</a> - 
-        <a href="mailto:contact@looxmaxapp.com">Contact</a> - 
+        <a href="https://looxmaxapp.com/contact">Contact</a> - 
         <a href="privacy.html">Privacy</a>
     </div>
 </body>
