--- a/contact.html
+++ b/contact.html
@@ -80,10 +80,10 @@
         <p>We strive to respond to all inquiries as quickly as possible. Thank you for your interest in LooxMaxApp!</p>
     </div>
 	<div class="footer">
-        <div> 
+        <div>
+	    <a href="index.html">Home</a> -
             <a href="https://looxmaxapp.com/terms">Terms</a> - 
             <a href="https://looxmaxapp.com/privacy">Privacy</a> - 
-            <a href="https://looxmaxapp.com/deleteapp">App Info</a>
         </div>
         <div class="social-icons">
             <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
